Fix tag cloud spacing issues

--- a/_sass/dash/_layout.scss
+++ b/_sass/dash/_layout.scss
@@ -103,6 +103,7 @@
 
  .tag-cloud {
    margin-bottom: 2em;
+   text-align: left;
    & > a {
      display: inline-block;
      margin-bottom: 1em;
